; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ndp/extr_ndp.c_ts_print.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ndp/extr_ndp.c_ts_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@thiszone = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"%02d:%02d:%02d.%06u \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timeval*)* @ts_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ts_print(%struct.timeval* %0) #0 {
  %2 = alloca %struct.timeval*, align 8
  %3 = alloca i32, align 4
  store %struct.timeval* %0, %struct.timeval** %2, align 8
  %4 = load %struct.timeval*, %struct.timeval** %2, align 8
  %5 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load i32, i32* @thiszone, align 4
  %8 = add nsw i32 %6, %7
  %9 = srem i32 %8, 86400
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = sdiv i32 %10, 3600
  %12 = load i32, i32* %3, align 4
  %13 = srem i32 %12, 3600
  %14 = sdiv i32 %13, 60
  %15 = load i32, i32* %3, align 4
  %16 = srem i32 %15, 60
  %17 = load %struct.timeval*, %struct.timeval** %2, align 8
  %18 = getelementptr inbounds %struct.timeval, %struct.timeval* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %14, i32 %16, i32 %20)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
